--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -4,12 +4,16 @@ header {
   background-color: white;
   position: fixed;
   top: 0;
+  left: 0;
+  right: 0;
   z-index: 5;
+  /* margin: auto; */
 }
 
 .wrapper {
   position: relative;
   width: 80%;
+  max-width: 1240px;
   height: 100%;
   margin: auto;
   display: flex;
