--- a/src/styles/ShowBookings.css
+++ b/src/styles/ShowBookings.css
@@ -1,19 +1,25 @@
 .showBookingsContainer {
+  /* border: solid 2px red; */
   margin-top: 23vh;
   font-family: var(--textFont);
   padding: 0;
+  /* background-color: white; */
 }
 
 .showBookingsContainer .offer {
+  /* border: solid 1px blue; */
   display: flex;
   flex-wrap: wrap;
+  /* align-content: center; */
   justify-content: center;
 }
 
 .showBookingsContainer .offer .offerInfos {
+  /* border: solid 1px red; */
   flex: 0 0 40%;
   display: flex;
   align-items: center;
+  /* background-color: var(--blue); */
   background-color: var(--blue);
   color: white;
   padding: 15px;
@@ -34,6 +40,14 @@
   border-radius: 0 15px 0 0;
 }
 
+.showBookingsContainer .offer .offerInfos:nth-child(5) {
+  /* border-radius: 0 0 0 15px; */
+}
+
+.showBookingsContainer .offer .offerInfos:nth-child(6) {
+  /* border-radius: 0 0 15px 0; */
+}
+
 .showBookingsContainer .offer .offerInfos:last-child {
   border-radius: 0 0 15px 15px;
   flex: 0 0 80%;
@@ -48,6 +62,8 @@
 .showBookingsContainer .offer .infos {
   flex: 1;
   padding: 0 0 0 20px;
+  /* border: solid 1px black; */
+  /* text-align: center; */
 }
 
 .showBookingsContainer .offer .infosGoods {
@@ -56,11 +72,9 @@
 
 .showBookingsContainer .booking {
   /* border: solid 1px red; */
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+
   border-radius: 15px;
-  position: relative;
-  padding: 25px 10px;
-  background-color: white;
 }
 
 .showBookingsContainer .booking .user {
@@ -69,13 +83,13 @@
   gap: 25px;
 }
 
-.showBookingsContainer .booking .user > div {
+.showBookingsContainer .booking .user div {
+  /* border: solid 1px red; */
   align-self: stretch;
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 25px;
-  flex: 1;
 }
 
 .showBookingsContainer .booking img {
@@ -92,51 +106,45 @@
   text-transform: capitalize;
 }
 
-.showBookingsContainer .booking .bookingStatus {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  text-align: right;
-  font-style: italic;
+.showBookingsContainer .bookings {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-y: auto;
+  gap: 15px;
+  /* border: solid 2px green; */
+  padding: 0 2vw 5vh 2vw;
+}
+
+.showBookingsContainer .bookings .booking {
+  flex: 0 0 300px;
   padding: 10px;
-  text-transform: capitalize;
-  font-weight: bold;
-  color: var(--green);
 }
 
-.showBookingsContainer .booking .action {
-  font-family: var(--textFont);
-  color: var(--blue);
-  border: none;
-  background-color: transparent;
-  font-weight: bold;
-  font-size: 1rem;
-  cursor: pointer;
-  display: block;
-  margin: 5px auto;
-  width: fit-content;
-  text-transform: capitalize;
+/* scroolbar */
+/* width */
+
+.showBookingsContainer .bookings::-webkit-scrollbar {
+  width: 1px;
 }
 
-.showBookingsContainer .booking .statusindicator {
-  text-align: right;
-  text-transform: capitalize;
-  font-style: italic;
-  font-weight: bold;
-  color: var(--green);
+/* Track */
+
+.showBookingsContainer .bookings::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 15px;
+  margin: 0 2vw;
 }
 
-.showBookingsContainer .booking .grid-wrapper {
-  /* border: solid 1px red; */
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  row-gap: 10px;
+/* Handle */
+
+.showBookingsContainer .bookings::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 15px;
 }
 
-.showBookingsContainer .infos {
-  padding-left: 2vw;
-  font-style: italic;
+/* Handle on hover */
+.showBookingsContainer .bookings::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
 @media screen and (max-width: 700px) {
@@ -152,5 +160,8 @@
   }
   .showBookingsContainer .offer .offerInfos:nth-child(1) {
     border-radius: 15px 15px 0 0;
+  }
+  .showBookingsContainer .bookings::-webkit-scrollbar {
+    display: none;
   }
 }
