--- a/src/Pages/Home/HomeResearch.css
+++ b/src/Pages/Home/HomeResearch.css
@@ -15,9 +15,17 @@
 #inputs-grid-wrapper {
   /* border: solid 2px blue; */
   display: grid;
+
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  column-gap: 150px;
+  /* column-gap: 150px; */
+  column-gap: 20px;
   row-gap: 20px;
+}
+
+@media screen and (min-width: 1210px) {
+  #inputs-grid-wrapper {
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  }
 }
 
 @media screen and (max-width: 496px) {
