--- a/src/styles/SignForms.css
+++ b/src/styles/SignForms.css
@@ -1,6 +1,9 @@
 .formBackground {
   position: fixed;
   top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
   width: 100%;
   height: 100%;
   z-index: 8;
