--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,25 @@ body {
     transform: rotate(360deg);
   }
 }
+
+.input-outlined {
+  border: solid 2px var(--blue);
+  border-radius: 5px;
+  padding: 5px 10px;
+  width: 220px;
+  color: var(--blue);
+  background-color: transparent;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: bold;
+  text-transform: capitalize;
+  font-family: var(--textFont);
+  display: block;
+  margin: auto;
+  margin-top: 20px;
+}
+
+.input-oulined:hover {
+  background-color: var(--blue);
+  color: white;
+}
