--- a/src/styles/OfferBookings.css
+++ b/src/styles/OfferBookings.css
@@ -59,7 +59,7 @@
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   border-radius: 15px;
   position: relative;
-  padding: 25px 10px;
+  padding: 20px;
   background-color: white;
 }
 
@@ -93,13 +93,13 @@
 }
 
 .showBookingsContainer .booking .bookingStatus {
-  position: absolute;
+  /* position: absolute;
   top: 0;
   left: 0;
-  right: 0;
-  text-align: right;
-  font-style: italic;
-  padding: 10px;
+  right: 0; */
+  text-align: center;
+  padding-bottom: 10px;
+  font-size: 1rem;
   text-transform: capitalize;
   font-weight: bold;
   color: var(--green);
@@ -114,17 +114,10 @@
   font-size: 1rem;
   cursor: pointer;
   display: block;
-  margin: 5px auto;
+  margin: auto;
+  margin-top: 20px;
   width: fit-content;
   text-transform: capitalize;
-}
-
-.showBookingsContainer .booking .statusindicator {
-  text-align: right;
-  text-transform: capitalize;
-  font-style: italic;
-  font-weight: bold;
-  color: var(--green);
 }
 
 .showBookingsContainer .booking .grid-wrapper {
