--- a/src/styles/PayBooking.css
+++ b/src/styles/PayBooking.css
@@ -1,5 +1,9 @@
 .container.payBooking {
   padding: 0 2vw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
 }
 
 .container.payBooking .payment-label {
@@ -11,4 +15,98 @@
 .payment-logo {
   width: 32px;
   height: 32px;
+}
+
+.cardPaymentForm,
+.paypalPaymentForm {
+  max-width: 500px;
+  padding-top: 20px;
+}
+
+.cardPaymentForm .card-logo-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.cardPaymentForm .card-logo {
+  width: 50px;
+}
+
+.cardPaymentForm .grid-wrapper {
+  display: grid;
+  grid-template-columns: 1.5fr 1fr;
+  gap: 20px;
+}
+
+.cardPaymentForm input[type="submit"],
+.paypalPaymentForm input[type="submit"] {
+  border: solid 2px var(--blue);
+  border-radius: 5px;
+  padding: 5px 10px;
+  width: 220px;
+  color: var(--blue);
+  background-color: transparent;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: bold;
+  text-transform: capitalize;
+  font-family: var(--textFont);
+  display: block;
+  margin: auto;
+  margin-top: 20px;
+}
+
+.cardPaymentForm input[type="submit"]:hover,
+.paypalPaymentForm input[type="submit"]:hover {
+  background-color: var(--blue);
+  color: white;
+}
+
+.container.payBooking .payment-recap {
+  /* border: solid 2px black; */
+  max-width: 500px;
+  padding: 25px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  background-color: white;
+}
+.container.payBooking .payment-recap h2 {
+  text-transform: capitalize;
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+.container.payBooking .payment-recap .title {
+  /* font-weight: bold; */
+  text-transform: capitalize;
+}
+
+.container.payBooking .payment-recap .title.details {
+  margin-bottom: 10px;
+}
+
+.container.payBooking .payment-recap .grid-wrapper {
+  display: grid;
+  grid-template-columns: 1.5fr 1fr;
+  column-gap: 20px;
+  row-gap: 10px;
+}
+
+.container.payBooking .payment-recap ul {
+  list-style-type: square;
+}
+
+.container.payBooking .payment-recap .grid-wrapper > div:nth-last-child(2),
+.container.payBooking .payment-recap .grid-wrapper > div:last-child {
+  grid-column: span 2;
+}
+
+.container.payBooking .payment-recap .grid-wrapper > div:last-child {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  border-top: solid 2px black;
+  padding-top: 10px;
 }
