--- a/src/styles/SignForms.css
+++ b/src/styles/SignForms.css
@@ -9,12 +9,20 @@
   z-index: 8;
   background-color: rgba(0, 0, 0, 0.7);
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: center;
   justify-content: center;
   overflow-y: auto;
   padding: 15px 0;
   backdrop-filter: blur(7px);
+}
+
+.formBackground .fa-rectangle-xmark {
+  position: absolute;
+  top: 3vh;
+  right: 2vw;
+  color: white;
+  cursor: pointer;
 }
 
 .formWrapper,
@@ -72,11 +80,6 @@
 
 #signInForm input[type="button"],
 #signUpForm input[type="button"] {
-  /* border: solid 2px var(--blue);
-  border-radius: 5px;
-  padding: 5px 10px;
-  min-width: 220px; */
-
   font-family: var(--textFont);
   color: var(--blue);
   border: none;
