--- a/src/Pages/MyPackages/MyPackages.css
+++ b/src/Pages/MyPackages/MyPackages.css
@@ -1,4 +1,62 @@
 .myPackages {
   padding: 0 2vw;
-  padding-top: 20vh;
+}
+
+.myPackages .package {
+  width: 100%;
+  max-width: 500px;
+  margin: auto;
+  margin-bottom: 25px;
+  background-color: white;
+  border-radius: 15px;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
+    rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+  padding: 20px;
+}
+
+.myPackages .package .offerInfos:first-child {
+  display: grid;
+  grid-template-columns: 1fr max-content 1fr;
+  column-gap: 10px;
+  align-items: center;
+  text-transform: capitalize;
+}
+
+.myPackages .package .offerInfos > div:last-child {
+  justify-self: flex-end;
+}
+
+.myPackages .package .offerInfos:nth-child(2) {
+  /* border: solid 1px blue; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.myPackages .package .offerInfos .fa-plane-departure {
+  margin-right: 15px;
+}
+
+.myPackages .package .offerInfos .fa-plane-arrival {
+  margin-left: 15px;
+}
+
+.myPackages .package > .offerInfos:not(:last-child) {
+  margin-bottom: 5px;
+}
+
+.myPackages .package > .offerInfos.prepaid {
+  text-align: right;
+}
+
+.myPackages .package #confirmDelivery {
+  font-family: var(--textFont);
+  color: var(--blue);
+  border: none;
+  background-color: transparent;
+  font-weight: bold;
+  font-size: 1rem;
+  cursor: pointer;
+  display: block;
+  width: fit-content;
 }
