--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -6,6 +6,7 @@ nav {
   left: 0;
   right: 0;
   background-color: white;
+  /* background-color: var(--bodyBakgroundColor); */
   opacity: 0.98;
   z-index: 2;
   /* border: solid 1px red; */
@@ -62,9 +63,9 @@ nav ul {
   /* border: solid 1px red; */
 }
 
-.active {
+/* .active {
   border-top: solid 2px var(--blue);
-}
+} */
 
 /* hide srollbar */
 /* nav ul::-webkit-scrollbar {
