--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -2,6 +2,7 @@ header {
   width: 100%;
   height: 10vh;
   background-color: white;
+  /* background-color: var(--bodyBakgroundColor); */
   position: fixed;
   top: 0;
   left: 0;
