--- a/src/Pages/Inbox/Inbox.css
+++ b/src/Pages/Inbox/Inbox.css
@@ -8,6 +8,13 @@
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
     rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
   display: flex;
+  /* margin: auto; */
+}
+
+@media screen and (min-width: 1550px) {
+  #inboxContainer {
+    margin: 25vh auto 0 auto;
+  }
 }
 
 #inboxIndexWrapper {
@@ -86,13 +93,11 @@
   align-items: center;
   padding: 5px;
   background-color: rgba(30, 58, 138, 0.1);
-  z-index: 99;
 }
 
 .room .message-input {
   /* background-color: yellow; */
   padding-top: 5px;
-  z-index: 99;
 }
 
 .room form {
@@ -123,7 +128,7 @@
   max-width: 400px;
   word-wrap: break-word;
   padding: 10px;
-  border-radius: 15px;
+  border-radius: 10px;
 }
 
 .room .received {
@@ -136,4 +141,10 @@
   background-color: var(--blue);
   color: white;
   /* float: right; */
+}
+
+.room .message > div:first-child {
+  font-style: italic;
+  margin-bottom: 5px;
+  font-size: 0.8rem;
 }
