--- a/src/Pages/Inbox/Inbox.css
+++ b/src/Pages/Inbox/Inbox.css
@@ -100,6 +100,15 @@
   padding-top: 5px;
 }
 
+.room .message-input button[type="submit"] {
+  /* background-color: transparent; */
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+}
+
 .room form {
   display: flex;
   align-items: center;
