--- a/src/Pages/Inbox/Inbox.css
+++ b/src/Pages/Inbox/Inbox.css
@@ -1,5 +1,6 @@
 #inboxContainer {
-  height: calc(75vh - 2vw);
+  /* height: calc(75vh - 2vw); */
+  height: 70vh;
   margin-left: 2vw;
   margin-right: 2vw;
   background-color: white;
@@ -8,6 +9,7 @@
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
     rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
   display: flex;
+  /* position: relative; */
   /* margin: auto; */
 }
 
@@ -29,8 +31,8 @@
 }
 .chatrooms {
   width: 100%;
+  flex: 1 1 auto;
   max-width: 400px;
-  /* border: solid 1px red; */
   height: 100%;
   overflow-y: auto;
   border-right: solid 1px #dbdbdc;
@@ -41,7 +43,6 @@
   display: flex;
   align-items: center;
   gap: 5px;
-  /* border: solid 1px black; */
   overflow: hidden;
   text-decoration: none;
   color: black;
@@ -99,6 +100,8 @@
 .room {
   position: relative;
   overflow-y: hidden;
+  /* border: solid 1px red; */
+  width: 100%;
   height: 100%;
   display: grid;
   grid-template-rows: max-content 1fr max-content;
@@ -116,7 +119,7 @@
 
 .room .message-input {
   /* background-color: yellow; */
-  padding: 5px 5px 0px 5px;
+  padding: 5px 5px 5px 5px;
 }
 
 .room .message-input button[type="submit"] {
@@ -177,3 +180,31 @@
   margin-bottom: 5px;
   font-size: 0.8rem;
 }
+
+@media screen and (max-width: 700px) {
+  .roomView {
+    position: fixed;
+    border: solid 1px blue;
+    width: 96vw;
+    height: calc(100% - 10vh);
+    top: 10vh;
+    left: 2vw;
+    right: 2vw;
+    z-index: 2;
+    background-color: white;
+  }
+  .chatrooms {
+    max-width: 700px;
+    border-right: none;
+  }
+  /* #inboxIndexWrapper {
+    width: 0;
+    height: 0;
+  } */
+}
+
+/* @media screen and (min-width: 700px) {
+  .chatrooms {
+    max-width: 400px;
+  }
+} */
