--- a/src/Pages/Home/Announcements.css
+++ b/src/Pages/Home/Announcements.css
@@ -109,6 +109,12 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  .offers .homeOffer:last-child {
+    margin-bottom: 10vh;
+  }
+}
+
 @media screen and (max-width: 496px) {
   .offers {
     width: 100%;
