--- a/src/Pages/MyPackages/MyPackages.css
+++ b/src/Pages/MyPackages/MyPackages.css
@@ -19,6 +19,8 @@
     rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
   padding: 20px;
   position: relative;
+  animation: fadeIn 350ms ease-in both;
+  animation-delay: calc(var(--animationOrder) * 100ms);
 }
 
 .myPackages .package:last-of-type {
@@ -60,6 +62,14 @@
   text-align: right;
 }
 
+.myPackages .package > .offerInfos.deliveryotp {
+  text-align: right;
+  text-transform: capitalize;
+  /* color: var(--green); */
+  font-weight: bold;
+  padding-top: 5px;
+}
+
 .myPackages .package .confirmDelivery,
 .myPackages .package .getPaid {
   font-family: var(--textFont);
@@ -75,11 +85,13 @@
 
 .myPackages .package .package-status {
   padding: 10px 0;
-  text-align: center;
+  /* text-align: center; */
   text-transform: capitalize;
   font-weight: bold;
   color: var(--green);
   font-size: 1rem;
+  display: flex;
+  align-items: center;
 }
 
 .myPackages .package .packageOptionsIcon {
@@ -109,4 +121,9 @@
 
 .myPackages .package .packageOptions.show {
   display: block;
+}
+
+.dialogwrapper {
+  background-color: white;
+  margin: auto;
 }
