--- a/src/index.css
+++ b/src/index.css
@@ -27,13 +27,6 @@ body {
   background-color: var(--bodyBakgroundColor);
   width: 100%;
 }
-
-@media screen and (max-width: 768px) {
-  body {
-    /* padding-bottom: 11vh; */
-  }
-}
-
 #completeProfileForm,
 #researchForm,
 #proposeKilosForm,
@@ -69,7 +62,7 @@ body {
   }
 }
 
-.input-outlined {
+/* .input-outlined {
   border: solid 2px var(--blue);
   border-radius: 5px;
   padding: 5px 10px;
@@ -89,4 +82,4 @@ body {
 .input-oulined:hover {
   background-color: var(--blue);
   color: white;
-}
+} */
