--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -15,6 +15,8 @@ header {
   position: relative;
   width: 80%;
   max-width: 1240px;
+  /* max-width: 1550px; */
+
   height: 100%;
   margin: auto;
   display: flex;
