--- a/src/styles/ProposeKilos.css
+++ b/src/styles/ProposeKilos.css
@@ -2,6 +2,7 @@
   max-width: 1550px;
   margin: auto;
   margin-top: 25vh;
+  /* border: solid 1px red; */
 
   /* border: solid 2px blue; */
 }
@@ -15,8 +16,6 @@
   width: 100%;
   padding: 25px;
   border-radius: 10px;
-  /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px; */
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
     rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 }
