--- a/src/Pages/MyBalance/MyBalance.css
+++ b/src/Pages/MyBalance/MyBalance.css
@@ -18,7 +18,31 @@
   width: 100%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  align-items: center;
   padding: 0 5px;
+  position: relative;
+  z-index: 98;
+  /* border: solid 1px red; */
+}
+
+.myBalance .withdrawal {
+  font-family: var(--textFont);
+  color: var(--blue);
+  border: none;
+  background-color: transparent;
+  font-weight: bold;
+  font-size: 1rem;
+  cursor: pointer;
+  /* width: max-content; */
+  text-transform: capitalize;
+  margin-left: 25px;
+  transition: all 350ms ease-in-out;
+  margin-right: 10px;
+  /* border: solid 1px red; */
+}
+
+.myBalance .withdrawal:active {
+  transform: scale(1.1);
 }
 
 .myBalance .details {
@@ -53,6 +77,9 @@
 
 .myBalance .details ul {
   margin: 0;
+  display: flex;
+  gap: 5px;
+  list-style-type: none;
 }
 
 .myBalance .details > :nth-child(4),
@@ -61,3 +88,9 @@
 }
 
 /* MUI */
+
+.balance-payment-label {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
