--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -38,7 +38,7 @@ nav {
   color: var(--blue) !important;
 }
 
-nav ul {
+/* nav ul {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -49,10 +49,10 @@ nav ul {
   overflow: auto;
   scroll-behavior: smooth;
   position: relative;
-  /* border: solid 1px green; */
-}
+  border: solid 1px green;
+} */
 
-.navItem {
+/* .navItem {
   flex: 1 1 auto;
   white-space: nowrap;
   text-align: center;
@@ -60,8 +60,8 @@ nav ul {
   font-family: var(--textFont);
   font-weight: 600;
   padding: 0 10px;
-  /* border: solid 1px red; */
-}
+  border: solid 1px red;
+} */
 
 /* .active {
   border-top: solid 2px var(--blue);
