--- a/src/Pages/MyBalance/MyBalance.css
+++ b/src/Pages/MyBalance/MyBalance.css
@@ -18,6 +18,10 @@
   animation-delay: calc(var(--animationOrder) * 100ms);
 }
 
+.myBalance .transaction .text {
+  font-family: var(--textFont);
+}
+
 /* MUI */
 
 .myBalance .panel-header {
@@ -27,6 +31,7 @@
   align-items: center;
   padding: 0 5px;
   position: relative;
+  font-family: var(--textFont);
 
   /* border: solid 1px red; */
 }
