--- a/src/Pages/MyKilos/MyKilos.css
+++ b/src/Pages/MyKilos/MyKilos.css
@@ -52,10 +52,12 @@
   from {
     opacity: 0;
     transform: translate3d(0, 20%, 0);
+    -webkit-transform: translate3d(0, 20%, 0);
   }
   to {
     opacity: 1;
     transform: translate3d(0, 0, 0);
+    -webkit-transform: translate3d(0, 0, 0);
   }
 }
 
