--- a/src/Pages/ClaimDetails/Claim.css
+++ b/src/Pages/ClaimDetails/Claim.css
@@ -44,3 +44,41 @@
   display: block;
   width: fit-content;
 }
+
+#requests .message {
+  position: relative;
+  margin-top: 20px;
+  min-height: 300px;
+  border: solid 1px grey;
+  padding: 10px 10px 45px 10px;
+  background-color: white;
+  border-radius: 10px;
+}
+
+#requests .message-icons {
+  position: relative;
+  top: -25px;
+  padding: 2.5px 10px;
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  border: solid 1px red;
+}
+
+#request .message-icons button {
+  font-family: var(--textFont);
+  color: var(--blue);
+  border: none;
+  background-color: transparent;
+  font-weight: bold;
+  font-size: 1rem;
+  cursor: pointer;
+  margin: 5px auto;
+  width: fit-content;
+  text-transform: capitalize;
+  line-height: 0.04167em;
+}
+
+#requests .fa-solid.cancel {
+  cursor: pointer;
+}
