--- a/src/Pages/Home/Advertisement.css
+++ b/src/Pages/Home/Advertisement.css
@@ -1,19 +1,12 @@
 .advertisement {
   width: 80%;
   margin: auto;
-  margin-top: 13vh;
-
-  height: 10vh;
-  /* background-color: red; */
   border-radius: 10px;
   text-align: center;
-  padding-top: 10px;
+  padding: 1vh 0;
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
     rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
-  /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
-  /* box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px; */
 }
 
 @media screen and (max-width: 496px) {
