--- a/src/Pages/Home/Announcements.css
+++ b/src/Pages/Home/Announcements.css
@@ -4,49 +4,22 @@
 }
 
 .announcements {
-  width: calc(50% - 12.5px);
-}
-
-.announcements .filter {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: nowrap;
-}
-
-.announcements .filter > * {
-  flex: 1 0 auto;
-}
-
-.announcements .filter #filterform {
-  display: grid;
-  align-items: center;
-  grid-template-columns: max-content 1fr;
-  column-gap: 5px;
-}
-
-#filterform input {
-  background-color: #f9f9f9;
-}
-
-#filterform select {
-  width: 100%;
-  height: 25px;
+  width: calc(50% - 1.5vh);
 }
 
 .offers {
-  margin-top: 25px;
+  margin-top: 3vh;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
 }
 
 .offers .homeOffer {
-  width: 100%;
-  /* height: 200px; */
   background-color: white;
   border-radius: 15px;
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
     rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
   padding: 20px;
-  margin-bottom: 25px;
 }
 
 .offers .homeOffer .offerInfos:first-child {
@@ -88,7 +61,7 @@
 }
 
 .videoplayer {
-  width: calc(50% - 12.5px);
+  width: calc(50% - 1.5vh);
   float: right;
   border-radius: 15px;
   height: 200px;
