--- a/src/Pages/Home/HomeResearch.css
+++ b/src/Pages/Home/HomeResearch.css
@@ -1,25 +1,19 @@
 .homeResearch {
   width: 80%;
-  height: 100%;
   border-radius: 10px;
-  margin: 3vh auto;
+  margin: auto;
   background-color: white;
   padding: 20px;
   border: solid 1px white;
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
     rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
-  /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
 }
 
 #inputs-grid-wrapper {
-  /* border: solid 2px blue; */
   display: grid;
-
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  /* column-gap: 150px; */
-  column-gap: 20px;
-  row-gap: 20px;
+  column-gap: 25px;
+  row-gap: 25px;
 }
 
 @media screen and (min-width: 1210px) {
@@ -43,7 +37,6 @@
   border-radius: 5px;
   padding: 15px;
   font-family: var(--textFont);
-  /* cursor: pointer; */
   color: black;
   display: block;
   margin: 20px auto 0 auto;
