--- a/src/Pages/MyKilos/MyKilos.css
+++ b/src/Pages/MyKilos/MyKilos.css
@@ -14,25 +14,22 @@
 }
 
 /* masonry */
-.my-masonry-grid {
-  display: -webkit-box; /* Not needed if autoprefixing */
-  display: -ms-flexbox; /* Not needed if autoprefixing */
+/* .my-masonry-grid {
+  display: -webkit-box;
+  display: -ms-flexbox; 
   display: flex;
-  margin-left: -30px; /* gutter size offset */
+  margin-left: -30px;
   width: auto;
   padding: 0 2vw;
 }
 .my-masonry-grid_column {
-  padding-left: 30px; /* gutter size */
+  padding-left: 30px;
   background-clip: padding-box;
 }
 
-/* Style your items */
 .my-masonry-grid_column > div {
-  /* change div to reference your elements you put in <Masonry> */
-  /* background: grey; */
   margin-bottom: 30px;
-}
+} */
 
 /*masonry */
 
