--- a/src/styles/Spinner.css
+++ b/src/styles/Spinner.css
@@ -1,11 +1,17 @@
 .lds-roller {
-  display: inline-block;
-  position: relative;
+  /* display: inline-block; */
+  position: absolute;
+
   width: 80px;
   height: 80px;
-  top: 50vh;
-  left: 50vw;
-  transform: translateX(-50%) translateY(-50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  /* top: 50vh;
+  left: 50vw; */
+  /* transform: translateX(-50%) translateY(-50%); */
   /* transform: translate(-50vw, -50vh); */
 }
 .lds-roller div {
