--- a/src/Pages/ClaimDetails/Claim.css
+++ b/src/Pages/ClaimDetails/Claim.css
@@ -1,4 +1,4 @@
-#requests {
+/* #requests {
   padding: 0 2vw;
   word-wrap: break-word;
 }
@@ -26,7 +26,6 @@
   width: 150px;
   margin-right: 10px;
   transition: all 200ms ease-in;
-  /* cursor: pointer; */
 }
 
 #requests .request .file-preview:hover {
@@ -81,4 +80,4 @@
 
 #requests .fa-solid.cancel {
   cursor: pointer;
-}
+} */
