updated card  with compound component pattern

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   --logoFont: "Marck Script", cursive;
   --blue: #1e3a8a;
   --green: #3a8a1e;
+  --darkGreen: #006400;
   --transparentBlue: rgba(30, 58, 138, 0.6);
   --bodyBakgroundColor: #f3f6f8;
 }
